@@ -12,7 +12,7 @@ name: Term-Menus
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 1.84
+    version: 1.86
   TMMemHandle:
     file: lib/Term/Menus.pm
 requires:
@@ -22,4 +22,4 @@ requires:
   Term::RawInput: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 1.84
+version: 1.86
